add css and image files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://pingendo.github.io/pingendo-bootstrap/themes/default/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="custom.css" rel="stylesheet" type="text/css">
   </head><body>
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
@@ -57,6 +58,61 @@
                 </div>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 gridborder">
+            <a href="#" class="border">
+              <img src="image/google.png" class="center-block img-responsive">
+              <div class="caption">
+                <i class="fa fa-3x fa-close pull-right text-danger"></i> <!-- <i class="fa fa-3x fa-close text-danger"></i> -->
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 gridborder">
+            <a href="#">
+              <img src="image/youtube.jpg" class="center-block img-responsive">
+              <div class="caption">
+                <i class="fa fa-3x fa-close pull-right text-danger"></i> <!-- <i class="fa fa-3x fa-close text-danger"></i> -->
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 gridborder">
+            <a href="#">
+              <img src="image/facebook.png" class="center-block img-responsive">
+              <div class="caption">
+                <i class="fa fa-3x fa-check pull-right text-success"></i> <!-- <i class="fa fa-3x fa-close text-danger"></i> -->
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 gridborder">
+            <a href="#">
+              <img src="image/amazon.png" class="center-block img-responsive">
+              <div class="caption">
+                <i class="fa fa-3x fa-check pull-right text-success"></i> <!-- <i class="fa fa-3x fa-close text-danger"></i> -->
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="test">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            <p>One fine body...</p>
+          </div>
+          <div class="modal-footer">
+            <a class="btn btn-default" data-dismiss="modal">Close</a>
+            <a class="btn btn-primary">Save changes</a>
           </div>
         </div>
       </div>
