modal dialog can be showen now

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3 gridborder">
-            <a href="#" class="border">
+            <a href="#detailModal" class="border" data-toggle="modal">
               <img src="image/google.png" class="center-block img-responsive">
               <div class="caption">
                 <i class="fa fa-3x fa-close pull-right text-danger"></i> <!-- <i class="fa fa-3x fa-close text-danger"></i> -->
@@ -100,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="modal fade" id="test">
+    <div class="modal fade" id="detailModal">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
