+ Add Close button modal

--- a/mockup2/index.html
+++ b/mockup2/index.html
@@ -100,6 +100,7 @@
     <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 
           <div>
 
@@ -163,7 +164,7 @@
     <div class="modal fade youtube" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
-
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div>
 
             <img src="image/youtube.jpg" class="center-block img-responsive">
@@ -226,6 +227,7 @@
     <div class="modal fade facebook" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 
           <div>
 
@@ -289,6 +291,7 @@
     <div class="modal fade amazon" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
       <div class="modal-dialog modal-md">
         <div class="modal-content">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 
           <div>
 
