--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <meta name="viewport" content="width=512">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+  <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
+  <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
-  <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
-  <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
+  <!--script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
+  <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" /-->
 
 </head><body>
     <div class="navbar navbar-default navbar-static-top">
@@ -58,66 +61,6 @@
       </div>
     </div>
     <div class="section">
-      <div class="container">
-
-        <div class="panel-group" id="accordion">
-          <div class="panel panel-default" id="panel1">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" data-target="#collapseOne"
-                   href="#collapseOne">
-                  Password rules
-                </a>
-              </h4>
-
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse out">
-              <div class="panel-body">        <div class="row">
-                <div class="col-md-3">
-                  <ul class="list-group">
-                    <li class="list-group-item">uppercase letters
-                      <span class="label label-default pull-right">ABC</span>
-                    </li>
-                    <li class="list-group-item">lowercase letters
-                      <span class="label label-default pull-right">abc</span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-3">
-                  <ul class="list-group">
-                    <li class="list-group-item">minimum length
-                      <span class="label label-default pull-right">&gt; n</span>
-                    </li>
-                    <li class="list-group-item">maximum length
-                      <span class="label label-default pull-right">&lt; n</span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-3">
-                  <ul class="list-group">
-                    <li class="list-group-item">numbers
-                      <span class="label label-default pull-right">123</span>
-                    </li>
-                    <li class="list-group-item">special characters
-                      <span class="label label-default pull-right">!"§$%&amp;</span>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-3">
-                  <ul class="list-group">
-                    <li class="list-group-item">punctuation
-                      <span class="label label-default pull-right">.</span>
-                    </li>
-                    <li class="list-group-item">dictionary check
-                      <span class="label label-default pull-right">password1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              </div></div>
-          </div>
-        </div>
-      </div>
 
 
     </div>
@@ -214,7 +157,91 @@
     </div>
 
   <script type="text/javascript">
-    $.material.init()
   </script>
+<div class="container">
+    <div class="panel-group" id="accordion">
+      <div class="panel panel-default" id="panel1">
+        <div class="panel-heading">
+          <h4 class="panel-title">
+            <a data-toggle="collapse" data-target="#collapseOne"
+               href="#collapseOne">
+              Password generation based on input password
+            </a>
+          </h4>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">Passwort Suggestion</div>
+              <div class="col-md-7">            <form>
+                <div class="input-group">
+                  <input type="text" class="form-control" value="banana4.2X" placeholder="Some path" id="copy-input">
+    <span class="input-group-btn">
+            <button class="btn btn-default" type="button" id="check-button" data-toggle="tooltip" data-placement="button" title="Check TOP 100">
+              Check
+            </button>
+      <button class="btn btn-default" type="button" id="copy-button" data-toggle="tooltip" data-placement="button" title="Copy to Clipboard">
+        Copy
+      </button>
+    </span>
+                </div>
+              </form>
+                <div class="pull-right">
+                  Rules for password generation
+                  <span class="label label-primary">ABC</span>
+                  <span class="label label-primary">abc</span>
+                  <span class="label label-primary">123</span>
+                  <span class="label label-primary">&nbsp;.&nbsp;</span>
+                  <span class="label label-default">!"§$%&amp;</span>
+                </div></div>
+            </div>
 
+          </div>
+
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse out">
+          <div class="panel-body">        <div class="row">
+            <div class="col-md-3">
+              <ul class="list-group">
+                <li class="list-group-item">uppercase letters
+                  <span class="label label-default pull-right">ABC</span>
+                </li>
+                <li class="list-group-item">lowercase letters
+                  <span class="label label-default pull-right">abc</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <ul class="list-group">
+                <li class="list-group-item">minimum length
+                  <span class="label label-default pull-right">&gt; n</span>
+                </li>
+                <li class="list-group-item">maximum length
+                  <span class="label label-default pull-right">&lt; n</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <ul class="list-group">
+                <li class="list-group-item">numbers
+                  <span class="label label-default pull-right">123</span>
+                </li>
+                <li class="list-group-item">special characters
+                  <span class="label label-default pull-right">!"§$%&amp;</span>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <ul class="list-group">
+                <li class="list-group-item">punctuation
+                  <span class="label label-default pull-right">.</span>
+                </li>
+                <li class="list-group-item">dictionary check
+                  <span class="label label-default pull-right">password1</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          </div></div>
+      </div>
+    </div>
+</div>
 </body></html>
