--- a/final/index.html
+++ b/final/index.html
@@ -1,9 +1,11 @@
 <html><head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=512">
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!--script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
@@ -18,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><span>goldenpassword</span></a>
+          <a class="navbar-brand" href="#"><span><strong>golden</strong>password</span></a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -49,7 +51,7 @@
             <form role="form">
               <div class="form-group">
                 <div class="input-group" style="width:100%">
-                  <input type="text" class="form-control" placeholder="enter your password">
+                  <input type="text" class="form-control main" placeholder="enter your password" autofocus>
                 </div>
               </div>
             </form>
@@ -62,9 +64,18 @@
         </div>
       </div>
     </div>
-    <div class="section"></div>
-    <div class="section"><div class="container"><div class="row"><div class="col-md-12"><table class="table table-striped">
-              <thead>
+    <div class="section">
+
+
+    </div>
+    <div class="section"><div class="container"><div class="row"><div class="col-md-12">
+      <div class="input-group mobilefilter"> <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> page </span>
+
+        <input id="filter" type="text" class="form-control" placeholder="e.g. google">
+      </div>
+      <div class="table-responsive-vertical shadow-z-1">
+        <!-- Table starts here -->
+        <table id="table" class="table table-mc-light-blue">              <thead>
                 <tr>
                   <th><div class="input-group filter"> <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> page </span>
 
@@ -79,22 +90,22 @@
               <tbody>
                 <tr>
                 <td>  <img src="img/google.png" class="img-logo">google.de</td>
-                  <td>
+                  <td data-title="valid">
                     <i class="fa fa-2x fa-close fa-fw text-danger"></i>
                   </td>
-                  <td>
+                  <td data-title="mandatory">
                     <span class="label label-danger listlabel">&gt; 7</span>
                   </td>
-                  <td>
+                  <td data-title="not allowed">
                     <span class="label label-default listlabel">!"§$%&amp;</span>
                   </td>
-                  <td>
-                    <div class="input-group generator">
+                  <td data-title="suggestion">
+                    <span class="input-group generator">
                       <input type="text" class="form-control" value="banana4.2X" placeholder="Some path" id="copy-input">
                       <span class="input-group-btn">
                         <button class="btn btn-info" type="button" id="copy-button" data-toggle="tooltip" data-placement="button" title="Copy to Clipboard">Copy</button>
                       </span>
-                    </div>
+                    </span>
                   </td>
 
                 </tr>
@@ -153,7 +164,15 @@
 
                 </tr>
               </tbody>
-            </table></div></div></div></div><div class="section">
+            </table></div>
+
+
+
+
+
+
+
+    </div></div></div></div><div class="section">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
