+ smaller password input on desktop

--- a/final/index.html
+++ b/final/index.html
@@ -111,16 +111,16 @@
                 </tr>
                 <tr>
                   <td><img src="img/youtube.jpg" class="img-logo"> youtube.com</td>
-                  <td>
+                  <td data-title="valid">
                     <i class="fa fa-2x fa-close fa-fw text-danger"></i>
                   </td>
-                  <td>
+                  <td data-title="mandatory">
                     <span class="label label-danger listlabel">&gt; 7</span>
                   </td>
-                  <td>
+                  <td  data-title="not allowed"‚>
                     <span class="label label-default listlabel">!"§$%&amp;</span>
                   </td>
-                  <td><div class="input-group generator">
+                  <td data-title="suggestion"><div class="input-group generator">
                       <input type="text" class="form-control" value="banana4.2X" placeholder="Some path" id="copy-input">
                       <span class="input-group-btn">
                         <button class="btn btn-info" type="button" id="copy-button" data-toggle="tooltip" data-placement="button" title="Copy to Clipboard">Copy</button>
