"mandatory" column first implementation todo: refactorize code to share one function returning the state object

--- a/prototype1/gp-website-grid.html
+++ b/prototype1/gp-website-grid.html
@@ -22,7 +22,7 @@
                 <gp-valid-cell password="password" row-object="row"></gp-valid-cell>
             </td>
             <td>
-                <gp-mandatory-cell></gp-mandatory-cell>
+                <gp-mandatory-cell password="password" row-object="row"></gp-mandatory-cell>
             </td>
             <td>
                 <span class="label label-default listlabel">!"§$%&amp;</span>
