--- a/prototype1/gp-website-grid.html
+++ b/prototype1/gp-website-grid.html
@@ -25,7 +25,7 @@
                 <gp-mandatory-cell password="password" row-object="row"></gp-mandatory-cell>
             </td>
             <td>
-                <span class="label label-default listlabel">!"§$%&amp;</span>
+                <gp-nallowed-cell password="password" row-object="row"></gp-nallowed-cell>
             </td>
             <td>
                 <div class="input-group generator">
@@ -37,4 +37,4 @@
             </td>
         </tr>
     </tbody>
-</table>
+</table> 
