fixed red max length if password is null

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -71,8 +71,8 @@
                         </div>
                     </form>
                     <span class="label label-default pull-right">&nbsp;.&nbsp;</span>
-                    <span class="label label-success pull-right">123</span>
-                    <span class="label label-success pull-right">abc</span>
+                    <span class="label label-default pull-right">123</span>
+                    <span class="label label-default pull-right">abc</span>
                     <span class="label label-default pull-right">!"§$%&amp;</span>
                     <span class="label label-default pull-right">ABC</span>
                 </div>
