Adding an AngularJS service for code refactoring

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -13,10 +13,11 @@
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" /-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="script.js"></script>
-    <script src="directives/gp-website-grid.js"></script>
-    <script src="directives/gp-valid-cell.js"></script>
-    <script src="directives/gp-mandatory-cell.js"></script>
-    <script src="directives/gp-nallowed-cell.js"></script>
+    <script src="services/passwordCheckService.js"></script>
+    <script src="directives/gpWebsiteGrid.js"></script>
+    <script src="directives/gpValidCell.js"></script>
+    <script src="directives/gpMandatoryCell.js"></script>
+    <script src="directives/gpNallowedCell.js"></script>
 </head>
 
 <body ng-app="goldenPasswordApp" ng-controller="fetchGridData">
