--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -14,6 +14,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="script.js"></script>
     <script src="services/passwordCheckService.js"></script>
+    <script src="directives/gpInputIndications.js"></script>
     <script src="directives/gpWebsiteGrid.js"></script>
     <script src="directives/gpValidCell.js"></script>
     <script src="directives/gpMandatoryCell.js"></script>
@@ -71,11 +72,7 @@
                             </div>
                         </div>
                     </form>
-                    <span class="label label-default pull-right">&nbsp;.&nbsp;</span>
-                    <span class="label label-default pull-right">123</span>
-                    <span class="label label-default pull-right">abc</span>
-                    <span class="label label-default pull-right">!"§$%&amp;</span>
-                    <span class="label label-default pull-right">ABC</span>
+                    <gp-input-indications password="password"></gp-input-indications>
                 </div>
             </div>
         </div>
