- Adding a gpSuggestionCell directive - Minor fixes

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -19,6 +19,7 @@
     <script src="directives/gpValidCell.js"></script>
     <script src="directives/gpMandatoryCell.js"></script>
     <script src="directives/gpNallowedCell.js"></script>
+    <script src="directives/gpSuggestionCell.js"></script>
 </head>
 
 <body ng-app="goldenPasswordApp" ng-controller="fetchGridData">
