--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=512">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
