--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -13,7 +13,11 @@
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" /-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="script.js"></script>
-    <script src="services/passwordCheckService.js"></script>
+    <script src="services/contiguousCharsService.js"></script>
+    <script src="services/regexService.js"></script>
+    <script src="services/passwordClassesService.js"></script>
+    <script src="services/passwordRulesService.js"></script>
+    <script src="services/passwordNallowedService.js"></script>
     <script src="directives/gpInputIndications.js"></script>
     <script src="directives/gpWebsiteGrid.js"></script>
     <script src="directives/gpValidCell.js"></script>
