- working contiguousCharsService to detect contiguous characters - adding specialComplexityService

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -17,6 +17,7 @@
     <script src="services/regexService.js"></script>
     <script src="services/passwordClassesService.js"></script>
     <script src="services/passwordRulesService.js"></script>
+    <script src="services/specialComplexitiesService.js"></script>
     <script src="services/passwordNallowedService.js"></script>
     <script src="directives/gpInputIndications.js"></script>
     <script src="directives/gpWebsiteGrid.js"></script>
