--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="zxcvbn/zxcvbn.js"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
+          type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!--script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
@@ -18,6 +20,7 @@
     <script src="services/passwordClassesService.js"></script>
     <script src="services/passwordRulesService.js"></script>
     <script src="services/specialComplexitiesService.js"></script>
+    <script src="services/dictionaryService.js"></script>
     <script src="services/passwordNallowedService.js"></script>
     <script src="directives/gpInputIndications.js"></script>
     <script src="directives/gpWebsiteGrid.js"></script>
@@ -28,86 +31,92 @@
 </head>
 
 <body ng-app="goldenPasswordApp" ng-controller="fetchGridData">
-    <div class="navbar navbar-default navbar-static-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                <a class="navbar-brand" href="#"><span>goldenpassword</span></a>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active">
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">FAQ</a>
-                    </li>
-                    <li>
-                        <a href="#">Request Page</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center"></h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h2 class="text-center">Check your password against the password policies of the top 100 web pages.</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-offset-3 col-md-6">
-                    <form role="form">
-                        <div class="form-group">
-                            <div class="input-group" style="width:100%">
-                                <input type="text" class="form-control" placeholder="enter your password" ng-model="password" />
-                            </div>
-                        </div>
-                    </form>
-                    <gp-input-indications password="password"></gp-input-indications>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section"></div>
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <gp-website-grid></gp-website-grid>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript">
-                    </script>
+<div class="navbar navbar-default navbar-static-top">
     <div class="container">
-        <div class="panel-group" id="accordion"></div>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"><span>goldenpassword</span></a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active">
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+                <li>
+                    <a href="#">Request Page</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
+</div>
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center"></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center">Check your password against the password policies of the top 100 web pages.</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-offset-3 col-md-6">
+                <form role="form">
+                    <div class="form-group">
+                        <div class="input-group" style="width:100%">
+                            <input type="text" class="form-control" placeholder="enter your password"
+                                   ng-model="password"/>
+                        </div>
+                    </div>
+                </form>
+                <gp-input-indications password="password"></gp-input-indications>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section"></div>
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="input-group mobilefilter"><span class="input-group-addon"><span
+                        class="glyphicon glyphicon-search"></span> page </span>
+
+                    <input id="filter" type="text" class="form-control" placeholder="e.g. google" ng-model="search">
+                </div>
+                <gp-website-grid></gp-website-grid>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript">
+</script>
+<div class="container">
+    <div class="panel-group" id="accordion"></div>
+</div>
 
 
 </body>
