Commit about "valid" column and dictionary check - creating passwordValidService to move logic from gpValidCell directive - adding a dictionary check rule to "valid" column - removing console logs and unused variables

--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -20,6 +20,7 @@
     <script src="services/passwordClassesService.js"></script>
     <script src="services/passwordRulesService.js"></script>
     <script src="services/specialComplexitiesService.js"></script>
+    <script src="services/passwordValidService.js"></script>
     <script src="services/dictionaryService.js"></script>
     <script src="services/passwordNallowedService.js"></script>
     <script src="directives/gpInputIndications.js"></script>
