--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -14,6 +14,8 @@
     <!--script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
         <link rel="stylesheet" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" /-->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="https://cdn.rawgit.com/zenorocha/clipboard.js/master/dist/clipboard.min.js"></script>
+    <script src="ngclipboard/ngclipboard.min.js"></script>
     <script src="script.js"></script>
     <script src="services/contiguousCharsService.js"></script>
     <script src="services/regexService.js"></script>
