--- a/prototype1/index.html
+++ b/prototype1/index.html
@@ -86,6 +86,7 @@
                 <form role="form">
                     <div class="form-group">
                         <div class="input-group" style="width:100%">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span> password </span>
                             <input type="text" class="form-control" placeholder="enter your password"
                                    ng-model="password"/>
                         </div>
@@ -108,14 +109,20 @@
                     <input id="filter" type="text" class="form-control" placeholder="e.g. google" ng-model="search">
                 </div>
 
-                
-                <div sticky sticky-class="whitebg" style="width: 100%;height:35px;">
+
+                <div sticky sticky-class="whitebg show" style="width: 100%;height:35px;visibility: hidden;">
 
 
                     <button class="btn btn-primary pull-right" ng-disabled="password.length<1"
-                            ng-controller="RefreshController" ng-click="refreshSuggestions();"><span class="glyphicon glyphicon-refresh
+                            ng-controller="RefreshController" ng-click="refreshSuggestions();" style="visibility: visible !important;"><span class="glyphicon glyphicon-refresh
   "></span> New Suggestions
                     </button>
+                    <div class="input-group" style="
+    min-width: 50%;visibility: inherit;
+">
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span> password </span>
+                        <input type="text" class="form-control" placeholder="enter your password" ng-model="password">
+                    </div>
                 </div>
 
                 <gp-website-grid></gp-website-grid>
