+ add language chooser

--- a/index.html
+++ b/index.html
@@ -114,11 +114,18 @@
 
                 <div sticky sticky-class="whitebg show" style="width: 100%;height:35px;visibility: hidden;">
 
-
+<div ng-controller="RefreshController">
                     <button class="btn btn-primary pull-right" ng-disabled="password.length<1"
-                            ng-controller="RefreshController" ng-click="refreshSuggestions();" style="visibility: visible !important;"><span class="glyphicon glyphicon-refresh
+                             ng-click="refreshSuggestions();" style="visibility: visible !important;"><span class="glyphicon glyphicon-refresh
   "></span> New Suggestions
                     </button>
+                    <div style="margin-right:5px;">
+                    <div class='flag--netherlands pull-right'  style="visibility: visible !important;" ng-click="setLang('nl')" ng-class="{'activeflag': language == 'nl','disabledflag': password < 1}"></div>
+                    <div class='flag--uk pull-right'  style="visibility: visible !important;" ng-click="setLang('en')" ng-class="{'activeflag': language == 'en','disabledflag': password < 1}"></div>
+                    <div class='flag--germany pull-right'  style="visibility: visible !important;" ng-click="setLang('de')" ng-class="{'activeflag': language == 'de','disabledflag': password < 1}">
+                    </div>
+                    </div>
+</div>
                     <div class="input-group" style="
     min-width: 50%;visibility: inherit;
 ">
