--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   "></span> New Suggestions
                     </button>
                     <div style="margin-right:5px;">
-                    <div class='flag--netherlands pull-right'  style="visibility: visible !important;" ng-click="setLang('nl')" ng-class="{'activeflag': language == 'nl','disabledflag': password < 1}"></div>
+                    <div class='flag--netherlands pull-right'  style="visibility: visible !important;" ng-click="setLang('dk')" ng-class="{'activeflag': language == 'dk','disabledflag': password < 1}"></div>
                     <div class='flag--uk pull-right'  style="visibility: visible !important;" ng-click="setLang('en')" ng-class="{'activeflag': language == 'en','disabledflag': password < 1}"></div>
                     <div class='flag--germany pull-right'  style="visibility: visible !important;" ng-click="setLang('de')" ng-class="{'activeflag': language == 'de','disabledflag': password < 1}">
                     </div>
