--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="input-group" style="width:100%">
                             <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span> password </span>
                             <input type="text" class="form-control" placeholder="enter your password"
-                                   ng-model="password"/ ng-model-options="{debounce: 500}">
+                                   ng-model="password" ng-model-options="{debounce: 250}"/>
                         </div>
                     </div>
                 </form>
@@ -130,7 +130,7 @@
     min-width: 50%;visibility: inherit;
 ">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span> password </span>
-                        <input type="text" class="form-control" placeholder="enter your password" ng-model="password" ng-model-options="{debounce: 500}">
+                        <input type="text" class="form-control" placeholder="enter your password" ng-model="password" ng-model-options="{debounce: 250}">
                     </div>
                 </div>
 
