+ Lato for Website Title

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center">Check your password against the password policies of the top 100 web pages.</h2>
-            </div>
+                <h2 class="text-center" style="
+    font-family: Lato;
+">Check your password against the password policies of the top 100 web pages.</h2>            </div>
         </div>
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
